--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "@react-three/fiber": "^8.13.7",
   
     
+  "@splidejs/react-splide": "^0.7.12",
+  
+    
   "@testing-library/jest-dom": "^5.17.0",
   
     
